--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,13 +7,13 @@ hero:
   image:
     file: ../../assets/houston.webp
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Python Tutorials
+      link: /python-backend-exploration/python/
       icon: right-arrow
       variant: primary
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
+    - text: FastAPI Tutorials
+      link: /python-backend-exploration/fastapi/
+      icon: right-arrow
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
